<resources>
    <string name="app_name">Movies search</string>
    <string name="button_name">To invite a friend</string>
    <string name="question_invite">Hello. Would you like to watch a movie?</string>
    <string name="button_name_favorites">Open favorites</string>
    <string name="title_favorite">Favorite movies</string>
    <string name="button_delete">Delete</string>
    <string name="question_exit">Are you want to exit the app?</string>
    <string name="notify_delete">Movie removed from favorites</string>
    <string name="notify_add">Movie added to favorites</string>
    <string name="confirm">Please confirm.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="klon" translatable="false">Клон</string>
    <string name="morbius" translatable="false">Морбиус</string>
    <string name="obratimayarealnost" translatable="false">Обратимая реальность</string>
    <string name="padenieluny" translatable="false">Падение луны</string>
    <string name="rodmugskoy" translatable="false">Род мужской</string>
    <string name="sonic2" translatable="false">Соник 2</string>
    <string name="superpitomcy" translatable="false">Суперпитомцы</string>
    <string name="taynaamuleta" translatable="false">Тайна амулета</string>
    <string name="vivarium" translatable="false">Вивариум</string>

    <string name="klon_content" translatable="false">Фильм Клон (Двойник) 2022 года это фантастический боевик по сюжету которого главная героиня узнаёт о своём смертельном диагнозе и не желая пропасть бесследно заказывает изготовление собственного, двойника, который сможет её подменить. Неожиданно болезнь отступает и теперь ей нужно ликвидировать клона, который оказался не нужен. Но двойник просто так умирать не желает и начинает бороться за свою жизнь, оказывая вооружённое сопротивление своей хозяйке. Впереди их ждёт напряжённая дуэль насмерть.</string>
    <string name="morbius_content" translatable="false">Фильм Морбиус по комиксам Марвел рассказывает про Майкла Морбиуса, который с самого детства страдает редким заболеванием крови, а потому всю жизнь посвящает поиску лекарства от своего недуга. Изучая свойства летучих мышей он делает удивительное открытие, однако тайный эксперимент выходит из-под контроля. Теперь он начинает медленно превращаться в вампира, испытывая настоящую жажду крови. И чем сильнее эти звериные инстинкты, тем сложнее в окружающем мире сохранить лицо и остаться человеком.</string>
    <string name="obratimayarealnost_content" translatable="false">Фильм Обратимая реальность действие разворачивается в недалёком будущем, где виртуальная реальность при помощи компании «Новая жизнь» помогает клиентам исполнить свои сокровенные мечты - устроить лучшее свидание, отправиться в экстремальную поездку и даже поквитаться со своим боссом. Но однажды внутрь сюжетов начинают проникать страхи и комплексы клиентов, разрушая иллюзорный мил разными кошмарами. Компания подозревает хакеров-антивиртов, группировку, считающую, что от виртуальной реальности надо держаться подальше и стремящуюся вернуть людей в привычный мир настоящего. За дело берётся Михаил, сотрудник виртуальной полиции. Он подозревает сотрудницу компании - девушку Вику, а потому планирует втереться к ней в доверие по мере расследования. Но чем ближе он подбирается к разгадке, тем запутаннее и сложнее становятся их отношения.</string>
    <string name="padenieluny_content" translatable="false">Фильм Падение Луны это фантастика о том, как по непонятным причинам спутник Земли вдруг начинает сходить со своей орбиты, порождая на земной поверхности многообразие чудовищных катаклизмов и угрожать всему живому, что есть на нашей планете, неминуемым столкновением. Команда профессионалов должна не только выяснить причину надвигающейся катастрофы и узнать самые тёмные тайны Луны, но и попытаться предотвратить гибель человечества.</string>
    <string name="rodmugskoy_content" translatable="false">Фильм Род мужской главная героиня, недавно потерявшая мужа, пытается вернуться в норму и переезжает в тихий английский городок. Там она рассчитывает придти в себя и начать новую жизнь. Но неожиданно женщину начинает преследовать нечто зловещее из лесов поблизости, не давая забыть о своём горе и пугая каждый новый раз всё сильнее.</string>
    <string name="sonic2_content" translatable="false">Фильм Соник 2 в кино продолжит приключения синего ёжика и познакомит с различными его друзьями. Сюжет продолжит события картины Соник в кино 2020 года. Желая стать настоящим героем, Соник остаётся жить в Грин Хиллз и мечтает доказать свои возможности. Доктор Роботник и его загадочный напарник Наклз отправляются на поиски магического изумруда, обладающего мистическими свойствами. Чтобы предотвратить их козни, теперь Соник объединяется с лисёнком Тейлзом и отправляется на поиски камня, прежде, чем до него доберутся злодеи.</string>
    <string name="superpitomcy_content" translatable="false">Мультфильм Суперпитомцы расскажет о домашних питомцах Бэтмена и Супермена, которые ничем не хуже своих именитых хозяев - супергероев могут в одиночку спасти весь мир. Крипто - любимец Кларка Кента и обладает всеми способностями Супермена, помогая тому справляться в Метрополисе с ростом преступности. Но однажды членов Лиги Справедливости похищают, и Крипто вынужден попросить помощи у других домашних любимцев, чтобы вызволить их отважных хозяев из лап злоумышленников. Впереди им придётся раскрыть тайны похитителя, напасть на след и преодолеть все препятствия на пути к своей цели.</string>
    <string name="taynaamuleta_content" translatable="false">Фильм Тайна амулета от киностудии Сияна расскажет о том, как одно весьма древнее и мифическое создание отправляет трёх друзей в их детские облики, дабы те открыли настоящую дорогу к собственной мечте. Получится ли у них работать сообща и достичь своей цели, а также какие трудности придётся преодолеть главным героям в своих приключениях зрители и узнают, посмотрев это семейное кино.</string>
    <string name="vivarium_content" translatable="false">Фильм Вивариум расскажет о молодой влюблённой паре, попадающей в настоящий невероятный лабиринт сюрреализма и параллельных измерений в поисках нового жилья. Режиссёром этого запутанного и загадочного фантастического детектива стал начинающий постановщик Лоркан Финнеган, для которого это лишь второй опыт в полнометражном кино. Сюжет он сочинил вместе с Гарретом Шэнли. На Каннском кинофестивале 2019 года фильм получил особый приз - "Поддержка дистрибуции от Gan Foundation", а среди продюсеров проекта числится Тодд Браун (Мэнди, Азбука смерти, Рейд).</string>
    <string name="item_movies">Movies</string>
    <string name="item_favorites">Favorites</string>
    <string name="item_invite">Invite a friend</string>
</resources>