<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/button_invite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imMovie1"
                    android:layout_width="150dp"
                    android:layout_height="200dp"
                    android:layout_margin="8dp"
                    app:srcCompat="@drawable/klon" />

                <TextView
                    android:id="@+id/tvMovie1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp"
                    android:text="@string/klon"
                    android:textColor="@color/purple_700"
                    android:textSize="24sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imMovie2"
                    android:layout_width="150dp"
                    android:layout_height="200dp"
                    android:layout_margin="8dp"
                    app:srcCompat="@drawable/morbius" />

                <TextView
                    android:id="@+id/tvMovie2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp"
                    android:text="@string/morbius"
                    android:textColor="@color/purple_700"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imMovie3"
                    android:layout_width="150dp"
                    android:layout_height="200dp"
                    android:layout_margin="8dp"
                    app:srcCompat="@drawable/obratimayarealnost" />

                <TextView
                    android:id="@+id/tvMovie3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp"
                    android:text="@string/obratimayarealnost"
                    android:textColor="@color/purple_700"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imMovie4"
                    android:layout_width="150dp"
                    android:layout_height="200dp"
                    android:layout_margin="8dp"
                    app:srcCompat="@drawable/padenieluny" />

                <TextView
                    android:id="@+id/tvMovie4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp"
                    android:text="@string/padenieluny"
                    android:textColor="@color/purple_700"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imMovie5"
                    android:layout_width="150dp"
                    android:layout_height="200dp"
                    android:layout_margin="8dp"
                    app:srcCompat="@drawable/rodmugskoy" />

                <TextView
                    android:id="@+id/tvMovie5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp"
                    android:text="@string/rodmugskoy"
                    android:textColor="@color/purple_700"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imMovie6"
                    android:layout_width="150dp"
                    android:layout_height="200dp"
                    android:layout_margin="8dp"
                    app:srcCompat="@drawable/sonic2" />

                <TextView
                    android:id="@+id/tvMovie6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp"
                    android:text="@string/sonic2"
                    android:textColor="@color/purple_700"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imMovie7"
                    android:layout_width="150dp"
                    android:layout_height="200dp"
                    android:layout_margin="8dp"
                    app:srcCompat="@drawable/superpitomcy" />

                <TextView
                    android:id="@+id/tvMovie7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp"
                    android:text="@string/superpitomcy"
                    android:textColor="@color/purple_700"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imMovie8"
                    android:layout_width="150dp"
                    android:layout_height="200dp"
                    android:layout_margin="8dp"
                    app:srcCompat="@drawable/taynaamuleta" />

                <TextView
                    android:id="@+id/tvMovie8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp"
                    android:text="@string/taynaamuleta"
                    android:textColor="@color/purple_700"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imMovie9"
                    android:layout_width="150dp"
                    android:layout_height="200dp"
                    android:layout_margin="8dp"
                    app:srcCompat="@drawable/vivarium" />

                <TextView
                    android:id="@+id/tvMovie9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp"
                    android:text="@string/vivarium"
                    android:textColor="@color/purple_700"
                    android:textSize="24sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button_invite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/button_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
